--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.7
   geolocator: ^13.0.2
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
